# avocados

./: pyproject.toml  scrap.ipynb
.ipynb_checkpoints/: scrap-checkpoint.ipynb
tmp/: raw
