[tool.poetry]
name = "avacados"
version = "0.1.0"
description = "Avocado investigation"
authors = ["Alastair Hamilton <alastair.amhamilton@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^0.25.3"
numpy = "^1.18.1"
jupyter = "^1.0.0"
ipykernel = "^5.1.4"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
